style(example.ipynb): black format

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -229,7 +229,9 @@
    ],
    "source": [
     "def get_string_diff(lft_str, rgt_str):\n",
-    "    return \"lft_str != rgt_str\\n\" + bumbag.highlight_string_differences(lft_str, rgt_str)\n",
+    "    return \"lft_str != rgt_str\\n\" + bumbag.highlight_string_differences(\n",
+    "        lft_str, rgt_str\n",
+    "    )\n",
     "\n",
     "\n",
     "try:\n",
