feat: add stopwatch

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_19213/54865336.py\", line 2, in <cell line: 1>\n",
+      "  File \"/tmp/ipykernel_25795/54865336.py\", line 2, in <cell line: 1>\n",
       "    assert lft_str == rgt_str, f\"{lft_str} != {rgt_str}\"\n",
       "AssertionError: hello != hallo\n"
      ]
@@ -218,7 +218,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_19213/4023425549.py\", line 8, in <cell line: 7>\n",
+      "  File \"/tmp/ipykernel_25795/4023425549.py\", line 8, in <cell line: 7>\n",
       "    assert lft_str == rgt_str, get_string_diff(lft_str, rgt_str)\n",
       "AssertionError: lft_str != rgt_str\n",
       "hello\n",
@@ -244,60 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `humantime`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use as decorator:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "import functools\n",
-    "\n",
-    "import bumbag\n",
-    "\n",
-    "\n",
-    "def stopwatch(func):\n",
-    "    @functools.wraps(func)\n",
-    "    def wrapper(*args, **kwargs):\n",
-    "        t0 = time.time()\n",
-    "        output = func(*args, **kwargs)\n",
-    "        runtime = time.time() - t0\n",
-    "        print(f\"{func.__name__} took {bumbag.humantime(runtime)}\")\n",
-    "        return output\n",
-    "\n",
-    "    return wrapper\n",
-    "\n",
-    "\n",
-    "@stopwatch\n",
-    "def my_function():\n",
-    "    time.sleep(0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my_function took 0.100252s\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_function()"
+    "### `stopwatch`"
    ]
   },
   {
@@ -309,40 +256,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-09-17 14:29:29 -> 2023-09-17 14:29:29 = 0.10019s\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
-    "from contextlib import contextmanager\n",
     "\n",
-    "import bumbag\n",
-    "\n",
-    "\n",
-    "@contextmanager\n",
-    "def stopwatch():\n",
-    "    t0 = time.time()\n",
-    "    yield\n",
-    "    runtime = time.time() - t0\n",
-    "    print(f\"{bumbag.humantime(runtime)}\")"
+    "with bumbag.stopwatch():\n",
+    "    time.sleep(0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use as decorator:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@bumbag.stopwatch()\n",
+    "def my_function():\n",
+    "    time.sleep(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.100938s\n"
+      "2023-09-17 14:29:29 -> 2023-09-17 14:29:29 = 0.100472s\n"
      ]
     }
    ],
    "source": [
-    "with stopwatch():\n",
-    "    time.sleep(0.1)"
+    "my_function()"
    ]
   },
   {
@@ -354,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
