--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_25795/54865336.py\", line 2, in <cell line: 1>\n",
+      "  File \"/tmp/ipykernel_32085/54865336.py\", line 2, in <cell line: 1>\n",
       "    assert lft_str == rgt_str, f\"{lft_str} != {rgt_str}\"\n",
       "AssertionError: hello != hallo\n"
      ]
@@ -218,7 +218,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_25795/4023425549.py\", line 8, in <cell line: 7>\n",
+      "  File \"/tmp/ipykernel_32085/4023425549.py\", line 8, in <cell line: 7>\n",
       "    assert lft_str == rgt_str, get_string_diff(lft_str, rgt_str)\n",
       "AssertionError: lft_str != rgt_str\n",
       "hello\n",
@@ -248,15 +248,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools\n",
+    "\n",
+    "# overwrite default timestamp format for illustrative purposes\n",
+    "stopwatch = functools.partial(bumbag.stopwatch, fmt=\"%H:%M:%S\", flush=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use as context manager:"
+    "Use as context manager."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 1: Measure total elapsed time of multiple tasks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -265,45 +284,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-09-17 14:29:29 -> 2023-09-17 14:29:29 = 0.10019s\n"
+      "21:55:55 -> 21:55:55 = 0.100641s - example 1\n"
      ]
     }
    ],
    "source": [
     "import time\n",
     "\n",
-    "with bumbag.stopwatch():\n",
-    "    time.sleep(0.1)"
+    "with stopwatch(\"example 1\"):\n",
+    "    time.sleep(0.05)\n",
+    "    time.sleep(0.05)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use as decorator:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@bumbag.stopwatch()\n",
-    "def my_function():\n",
-    "    time.sleep(0.1)"
+    "Example 2: Measure elapased time of separate tasks within a function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def foo():\n",
+    "    with stopwatch(\"example 2 - task 1\"):\n",
+    "        time.sleep(0.05)\n",
+    "\n",
+    "    with stopwatch(\"example 2 - task 2\"):\n",
+    "        time.sleep(0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-09-17 14:29:29 -> 2023-09-17 14:29:29 = 0.100472s\n"
+      "21:55:55 -> 21:55:55 = 0.05031s - example 2 - task 1\n",
+      "21:55:55 -> 21:55:55 = 0.050427s - example 2 - task 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "foo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use as decorator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@stopwatch(\"example 3\")\n",
+    "def my_function():\n",
+    "    time.sleep(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21:55:56 -> 21:55:56 = 0.100681s - example 3\n"
      ]
     }
    ],
@@ -320,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
