refactor(stopwatch): use ContextDecorator class

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_32085/54865336.py\", line 2, in <cell line: 1>\n",
+      "  File \"/tmp/ipykernel_22171/54865336.py\", line 2, in <cell line: 1>\n",
       "    assert lft_str == rgt_str, f\"{lft_str} != {rgt_str}\"\n",
       "AssertionError: hello != hallo\n"
      ]
@@ -218,7 +218,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_32085/4023425549.py\", line 8, in <cell line: 7>\n",
+      "  File \"/tmp/ipykernel_22171/4023425549.py\", line 8, in <cell line: 7>\n",
       "    assert lft_str == rgt_str, get_string_diff(lft_str, rgt_str)\n",
       "AssertionError: lft_str != rgt_str\n",
       "hello\n",
@@ -254,9 +254,20 @@
    "outputs": [],
    "source": [
     "import functools\n",
+    "from datetime import datetime\n",
     "\n",
-    "# overwrite default timestamp format for illustrative purposes\n",
-    "stopwatch = functools.partial(bumbag.stopwatch, fmt=\"%H:%M:%S\", flush=False)"
+    "import time_machine\n",
+    "\n",
+    "# overwrite defaults for illustrative purposes\n",
+    "stopwatch = functools.partial(\n",
+    "    bumbag.stopwatch,\n",
+    "    fmt=\"%a, %-d %b %Y %H:%M:%S\",\n",
+    "    flush=False,\n",
+    ")\n",
+    "\n",
+    "# mock datetime\n",
+    "traveller = time_machine.travel(datetime(2023, 1, 1, 12, 0, 0))\n",
+    "traveller.start();"
    ]
   },
   {
@@ -270,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 1: Measure total elapsed time of multiple tasks"
+    "Example 1: Measure total elapsed time of multiple tasks."
    ]
   },
   {
@@ -284,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21:55:55 -> 21:55:55 = 0.100641s - example 1\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100464s - example 1\n"
      ]
     }
    ],
@@ -300,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 2: Measure elapased time of separate tasks within a function"
+    "Example 2: Measure elapased time of separate tasks within a function."
    ]
   },
   {
@@ -326,8 +337,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21:55:55 -> 21:55:55 = 0.05031s - example 2 - task 1\n",
-      "21:55:55 -> 21:55:55 = 0.050427s - example 2 - task 2\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050195s - example 2 - task 1\n",
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050193s - example 2 - task 2\n"
      ]
     }
    ],
@@ -349,7 +360,7 @@
    "outputs": [],
    "source": [
     "@stopwatch(\"example 3\")\n",
-    "def my_function():\n",
+    "def func():\n",
     "    time.sleep(0.1)"
    ]
   },
@@ -362,12 +373,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21:55:56 -> 21:55:56 = 0.100681s - example 3\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100358s - example 3\n"
      ]
     }
    ],
    "source": [
-    "my_function()"
+    "func()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traveller.stop()"
    ]
   },
   {
@@ -379,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
