--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_17719/54865336.py\", line 2, in <cell line: 1>\n",
+      "  File \"/tmp/ipykernel_16764/54865336.py\", line 2, in <cell line: 1>\n",
       "    assert lft_str == rgt_str, f\"{lft_str} != {rgt_str}\"\n",
       "AssertionError: hello != hallo\n"
      ]
@@ -218,7 +218,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_17719/4023425549.py\", line 8, in <cell line: 7>\n",
+      "  File \"/tmp/ipykernel_16764/4023425549.py\", line 8, in <cell line: 7>\n",
       "    assert lft_str == rgt_str, get_string_diff(lft_str, rgt_str)\n",
       "AssertionError: lft_str != rgt_str\n",
       "hello\n",
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 1: Measure total elapsed time of multiple tasks."
+    "Example 1: Measure total elapsed time of multiple statements."
    ]
   },
   {
@@ -295,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100857s - example 1\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100414s - example 1\n"
      ]
     }
    ],
@@ -311,39 +311,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 2: Measure elapased time of separate tasks within a function."
+    "Example 2: Measure total elapased time of multiple `stopwatch` instances."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def foo():\n",
-    "    with stopwatch(\"example 2 - task 1\"):\n",
-    "        time.sleep(0.05)\n",
-    "\n",
-    "    with stopwatch(\"example 2 - task 2\"):\n",
-    "        time.sleep(0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050182s - example 2 - task 1\n",
-      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050678s - example 2 - task 2\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050447s - example 2 - stopwatch 1\n",
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050193s - example 2 - stopwatch 2\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.10064s - total elapsed time"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "foo()"
+    "with stopwatch(\"example 2 - stopwatch 1\") as sw1:\n",
+    "    time.sleep(0.05)\n",
+    "\n",
+    "with stopwatch(\"example 2 - stopwatch 2\") as sw2:\n",
+    "    time.sleep(0.05)\n",
+    "\n",
+    "sw1 + sw2"
    ]
   },
   {
@@ -355,35 +357,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "@stopwatch(\"example 3\")\n",
-    "def func():\n",
+    "def func_with_supplied_label():\n",
     "    time.sleep(0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.10024s - example 3\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100716s - example 3\n"
      ]
     }
    ],
    "source": [
-    "func()"
+    "func_with_supplied_label()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@stopwatch()\n",
+    "def func_with_no_supplied_label():\n",
+    "    time.sleep(0.1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100518s - func_with_no_supplied_label\n"
+     ]
+    }
+   ],
+   "source": [
+    "func_with_no_supplied_label()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
