--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_16764/54865336.py\", line 2, in <cell line: 1>\n",
+      "  File \"/tmp/ipykernel_22739/54865336.py\", line 2, in <cell line: 1>\n",
       "    assert lft_str == rgt_str, f\"{lft_str} != {rgt_str}\"\n",
       "AssertionError: hello != hallo\n"
      ]
@@ -218,7 +218,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_16764/4023425549.py\", line 8, in <cell line: 7>\n",
+      "  File \"/tmp/ipykernel_22739/4023425549.py\", line 8, in <cell line: 7>\n",
       "    assert lft_str == rgt_str, get_string_diff(lft_str, rgt_str)\n",
       "AssertionError: lft_str != rgt_str\n",
       "hello\n",
@@ -295,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100414s - example 1\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100421s - example 1\n"
      ]
     }
    ],
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 2: Measure total elapased time of multiple `stopwatch` instances."
+    "Example 2: Measure total elapsed time of multiple `stopwatch` instances."
    ]
   },
   {
@@ -323,14 +323,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050447s - example 2 - stopwatch 1\n",
-      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050193s - example 2 - stopwatch 2\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050203s - example 2 - stopwatch 1\n",
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050605s - example 2 - stopwatch 2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.10064s - total elapsed time"
+       "0.100808s - total elapsed time"
       ]
      },
      "execution_count": 9,
@@ -375,7 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100716s - example 3\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100273s - example 3\n"
      ]
     }
    ],
@@ -403,7 +403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100518s - func_with_no_supplied_label\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100257s - func_with_no_supplied_label\n"
      ]
     }
    ],
