feat: stopwatch as a class (#41)
* build: disable private attributes and methods in documentation

* build: add time-machine as dev dependency

* refactor(stopwatch): use ContextDecorator class

* feat(stopwatch): add type check for label

* feat(stopwatch): add type check for flush

* tests(stopwatch): separate tests for type checks

* feat(stopwatch): add type check for fmt

* feat(stopwatch): enable computation of total elapsed time

* docs(README.md): add stopwatch example

* style: typo

--- a/docs/source/example.ipynb
+++ b/docs/source/example.ipynb
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_32085/54865336.py\", line 2, in <cell line: 1>\n",
+      "  File \"/tmp/ipykernel_22739/54865336.py\", line 2, in <cell line: 1>\n",
       "    assert lft_str == rgt_str, f\"{lft_str} != {rgt_str}\"\n",
       "AssertionError: hello != hallo\n"
      ]
@@ -218,7 +218,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_32085/4023425549.py\", line 8, in <cell line: 7>\n",
+      "  File \"/tmp/ipykernel_22739/4023425549.py\", line 8, in <cell line: 7>\n",
       "    assert lft_str == rgt_str, get_string_diff(lft_str, rgt_str)\n",
       "AssertionError: lft_str != rgt_str\n",
       "hello\n",
@@ -254,9 +254,20 @@
    "outputs": [],
    "source": [
     "import functools\n",
+    "from datetime import datetime\n",
     "\n",
-    "# overwrite default timestamp format for illustrative purposes\n",
-    "stopwatch = functools.partial(bumbag.stopwatch, fmt=\"%H:%M:%S\", flush=False)"
+    "import time_machine\n",
+    "\n",
+    "# overwrite defaults for illustrative purposes\n",
+    "stopwatch = functools.partial(\n",
+    "    bumbag.stopwatch,\n",
+    "    fmt=\"%a, %-d %b %Y %H:%M:%S\",\n",
+    "    flush=False,\n",
+    ")\n",
+    "\n",
+    "# mock datetime\n",
+    "traveller = time_machine.travel(datetime(2023, 1, 1, 12, 0, 0))\n",
+    "traveller.start();"
    ]
   },
   {
@@ -270,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 1: Measure total elapsed time of multiple tasks"
+    "Example 1: Measure total elapsed time of multiple statements."
    ]
   },
   {
@@ -284,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21:55:55 -> 21:55:55 = 0.100641s - example 1\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100421s - example 1\n"
      ]
     }
    ],
@@ -300,39 +311,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example 2: Measure elapased time of separate tasks within a function"
+    "Example 2: Measure total elapsed time of multiple `stopwatch` instances."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def foo():\n",
-    "    with stopwatch(\"example 2 - task 1\"):\n",
-    "        time.sleep(0.05)\n",
-    "\n",
-    "    with stopwatch(\"example 2 - task 2\"):\n",
-    "        time.sleep(0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21:55:55 -> 21:55:55 = 0.05031s - example 2 - task 1\n",
-      "21:55:55 -> 21:55:55 = 0.050427s - example 2 - task 2\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050203s - example 2 - stopwatch 1\n",
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.050605s - example 2 - stopwatch 2\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.100808s - total elapsed time"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "foo()"
+    "with stopwatch(\"example 2 - stopwatch 1\") as sw1:\n",
+    "    time.sleep(0.05)\n",
+    "\n",
+    "with stopwatch(\"example 2 - stopwatch 2\") as sw2:\n",
+    "    time.sleep(0.05)\n",
+    "\n",
+    "sw1 + sw2"
    ]
   },
   {
@@ -344,30 +357,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "@stopwatch(\"example 3\")\n",
-    "def my_function():\n",
+    "def func_with_supplied_label():\n",
     "    time.sleep(0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21:55:56 -> 21:55:56 = 0.100681s - example 3\n"
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100273s - example 3\n"
      ]
     }
    ],
    "source": [
-    "my_function()"
+    "func_with_supplied_label()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@stopwatch()\n",
+    "def func_with_no_supplied_label():\n",
+    "    time.sleep(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sun, 1 Jan 2023 12:00:00 -> Sun, 1 Jan 2023 12:00:00 = 0.100257s - func_with_no_supplied_label\n"
+     ]
+    }
+   ],
+   "source": [
+    "func_with_no_supplied_label()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traveller.stop()"
    ]
   },
   {
@@ -379,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
